Fixed some spacing and positioning issues with the images and project names

--- a/css/layout.css
+++ b/css/layout.css
@@ -10,6 +10,10 @@
   width: 35%;
 }
 
+.bottom-neg5 {
+  bottom: -5%;
+}
+
 .bottom-neg10 {
   bottom: -10%;
 }
